--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
    <button class="button-element" id="red">red</button> 
+<button class="button-element" id="blue">blue</butto>
 </body>
 </html>
