--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <button class="button-element" id="red">red</button> 
-<button class="button-element" id="blue">blue</butto>
+   <button class="button-element" id="blue">blue</button>
+   <button class="button-element" id="black">black</button>
 </body>
 </html>
